# mongo-based-book-store-fastapi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  app.env  docker-compose.yml  noxfile.py  pyproject.toml  readme.md  requirements.txt  server_setup.js
application/: __init__.py  models.py  mongo.py  routers.py
requirements/: integration.txt  requirements.txt  tests.txt
tests/: conftest.py  integration_test_utils.py  test_app.py  test_lovely.py
tests/integration/: integration_utils.py  test_create_and_delete_book.tavern.yaml  test_create_and_get_a_book_etag_func.tavern.yaml  test_create_and_get_the_book.tavern.yaml  test_create_and_update_book.tavern.yaml  test_create_book.tavern.yaml  test_create_many_books.tavern.yaml
tests/unit/: test_app.py
